# pynobo

./: MANIFEST.in  README.md  nobo.py  pynobo.py  pyproject.toml  setup.py  test_pynobo.py
.github/workflows/: python-publish.yml  python-test.yml
pynobo/: __init__.py
tests/: test_pynobo.py
